--- a/index.html
+++ b/index.html
@@ -6,21 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Frise chronologique</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <section>
+    <header>
       <h1>Frise chronologique</h1>
-      <a href="#" class="btn btn-success">créer une frise</a>
-    </section>
+      <button>Créer une frise</button>
+    </header>
     <div class="search-bar">
         <input type="search" id="keyword" name="keyword" aria-label="Recherche par mot-clef" placeholder="Tapez votre mot-clef" />
         <span id="no-result"></span>
-        <ul id="display-results">
-    
+        <ul id="display-results">  
         </ul>
     </div>
     <div id="list-thumbnails">
