README + change input id for a better clarity

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <button>Créer une frise</button>
     </header>
     <div class="search-bar">
-        <input type="search" id="keyword" name="keyword" aria-label="Recherche par mot-clef" placeholder="Tapez votre mot-clef" />
+        <input type="search" id="input-search" name="input-search" aria-label="Recherche par mot-clef" placeholder="Tapez votre mot-clef" />
         <span id="no-result"></span>
         <ul id="display-results">  
         </ul>
